--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,8 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <<script src='./build/static/main.d4bdd7cb.js'></script>
+</body>
     <div id="root"></div>
     <!--
       This HTML file is a template.
